Normalize HTTP header handling to ensure case-insensitivity in Spring integration
- Adjust serialization and deserialization to respect RFC 7230 header case-insensitivity.
- Update tests to validate header handling for varying casing.
- Add new `/api/parrot` endpoint with header validation logic.

# Conflicts:
#	src/integration/spring/src/jvmTest/java/community/flock/wirespec/integration/spring/java/emit/SpringJavaEmitterTest.java